<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		3_forgot_password
	 *	@date 		0
	 *	@title 		3_Forgot Password
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.2.8.xd
	 *
	 */
	-->
	<ScrollView android:id="@+id/3_forgot_password" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="667dp" >

			<View android:id="@+id/_bg___3_forgot_password"
				android:background="@drawable/_bg___3_forgot_password_shape"
				 android:layout_marginLeft="0dp"
				 android:layout_marginStart="0dp"
				android:layout_marginTop="0dp"
				android:layout_width="375dp"
				android:layout_height="667dp" />


			<RelativeLayout android:id="@+id/email"
				android:layout_marginTop="223dp"
				android:layout_marginStart="25dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View android:id="@+id/rectangle_33"
					android:background="@drawable/rectangle_33_shape"
					 android:layout_marginLeft="0dp"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="325dp"
					android:layout_height="59dp" />

				<TextView android:id="@+id/janedoe123_email_com"
					android:fontFamily="Neusa Next Std"
					android:textSize="15sp"
					android:textColor="@color/janedoe123_email_com_color"
					android:layout_marginLeft="56dp"
					android:layout_marginTop="28dp"
					android:layout_width="165dp"
					android:layout_height="23dp"
					android:text="@string/janedoe123_email_com_string"
					 />

				<TextView android:id="@+id/email_ek1"
					android:fontFamily="Neusa Next Std"
					android:alpha="0.5"
					 android:textSize="12sp"
					android:textColor="@color/janedoe123_email_com_color"
					android:layout_marginLeft="57dp"
					android:layout_marginTop="11dp"
					android:layout_width="42dp"
					android:layout_height="18dp"
					android:text="@string/email_ek1_string"
					 />

				<ImageView android:id="@+id/line_22"
					android:src="@drawable/line_22"
					android:contentDescription="line_22"
					 android:layout_marginLeft="217dp"
					 android:layout_marginStart="217dp"
					android:layout_marginTop="31dp"
					android:layout_width="2dp"
					android:layout_height="17dp" />


				<RelativeLayout android:id="@+id/_001_mail"
					android:layout_marginTop="23dp"
					android:layout_marginStart="18dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>


					<RelativeLayout android:id="@+id/group_114"
						android:layout_marginTop="0dp"
						android:layout_marginStart="0dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>


						<RelativeLayout android:id="@+id/group_113"
							android:layout_marginTop="0dp"
							android:layout_marginStart="0dp"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							>

							<ImageView android:id="@+id/path_64"
								android:src="@drawable/path_64"
								android:contentDescription="path_64"
								 android:layout_marginLeft="-0dp"
								 android:layout_marginStart="-0dp"
								android:layout_marginTop="-0dp"
								android:layout_width="19.26416015625dp"
								android:layout_height="14.199951171875dp" />

						</RelativeLayout>

					</RelativeLayout>


					<RelativeLayout android:id="@+id/group_116"
						android:layout_marginTop="1dp"
						android:layout_marginStart="1dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>


						<RelativeLayout android:id="@+id/group_115"
							android:layout_marginTop="0dp"
							android:layout_marginStart="0dp"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							>

							<ImageView android:id="@+id/path_65"
								android:src="@drawable/path_65"
								android:contentDescription="path_65"
								 android:layout_marginLeft="0dp"
								 android:layout_marginStart="0dp"
								android:layout_marginTop="0dp"
								android:layout_width="17.60986328125dp"
								android:layout_height="7.7442626953125dp" />

						</RelativeLayout>

					</RelativeLayout>

				</RelativeLayout>

			</RelativeLayout>


			<RelativeLayout android:id="@+id/button"
				android:layout_marginTop="297dp"
				android:layout_marginStart="23dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View android:id="@+id/rectangle_4"
					android:background="@drawable/rectangle_4_shape"
					 android:layout_marginLeft="0dp"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="330dp"
					android:layout_height="46dp" />

				<TextView android:id="@+id/send_email"
					android:fontFamily="Neusa Next Std"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="12sp"
					android:textColor="@color/send_email_color"
					android:layout_marginLeft="117dp"
					android:layout_marginTop="15dp"
					android:layout_width="83dp"
					android:layout_height="18dp"
					android:text="@string/send_email_string"
					 />


				<RelativeLayout android:id="@+id/group_16"
					android:layout_marginTop="8dp"
					android:layout_marginStart="293dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View android:id="@+id/rectangle_2"
						android:background="@drawable/rectangle_2_shape"
						 android:layout_marginLeft="0dp"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="28.79736328125dp"
						android:layout_height="29.620239257812dp" />

					<ImageView android:id="@+id/path_11"
						android:src="@drawable/path_11"
						android:contentDescription="path_11"
						 android:layout_marginLeft="11dp"
						 android:layout_marginStart="11dp"
						android:layout_marginTop="9dp"
						android:layout_width="7.58251953125dp"
						android:layout_height="12.518981933594dp" />

				</RelativeLayout>

			</RelativeLayout>


			<RelativeLayout android:id="@+id/tabs"
				android:layout_marginTop="58dp"
				android:layout_marginStart="25dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<TextView android:id="@+id/page_title"
					android:fontFamily="Neusa Next Std"
					android:textSize="30sp"
					android:textColor="@color/janedoe123_email_com_color"
					android:layout_marginLeft="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="240dp"
					android:layout_height="46dp"
					android:text="@string/page_title_string"
					 />

				<TextView android:id="@+id/page_title_ek1"
					android:fontFamily="Neusa Next Std"
					android:alpha="0.20000000298023"
					 android:textSize="30sp"
					android:textColor="@color/janedoe123_email_com_color"
					android:layout_marginLeft="261dp"
					android:layout_marginTop="0dp"
					android:layout_width="116dp"
					android:layout_height="46dp"
					android:text="@string/page_title_ek1_string"
					 />

			</RelativeLayout>

			<TextView android:id="@+id/enter_the_email_address_you_used_to_create_your_account_and_we_will_email_you_a_link_to_reset_your_password"
				android:fontFamily="Neusa Next Std"
				android:layout_gravity="center_horizontal|center"
				android:gravity="center"
				android:textSize="15sp"
				android:textColor="@color/janedoe123_email_com_color"
				android:layout_marginLeft="37dp"
				android:layout_marginTop="127dp"
				android:layout_width="297dp"
				android:layout_height="71.5dp"
				android:text="@string/enter_the_email_address_you_used_to_create_your_account_and_we_will_email_you_a_link_to_reset_your_password_string"
				 />

			<ImageView android:id="@+id/views____resources___keyboard"
				android:src="@drawable/views____resources___keyboard"
				android:contentDescription="views____resources___keyboard"
				 android:layout_marginLeft="0dp"
				 android:layout_marginStart="0dp"
				android:layout_marginTop="451dp"
				android:layout_width="375dp"
				android:layout_height="216dp" />

		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>